# lerobot_ur5e_gello

./: .gitignore  README.md  pyproject.toml
assets/rollouts/: rollout_results_merged30k_task1_fpft.json  rollout_results_merged30k_task1_lora.json  rollout_results_merged30k_task2_fpft.json  rollout_results_merged30k_task3_lora.json  rollout_results_merged30k_task4_lora.json  rollout_results_merged60k_task1_fpft.json  rollout_results_merged60k_task1_lora.json  rollout_results_merged60k_task2_fpft.json  rollout_results_merged60k_task3_lora.json  rollout_results_merged_task2_lora.json  rollout_results_merged_task3_fpft.json  rollout_results_merged_task4_fpft.json  rollout_results_task1_FFT_10k.json  rollout_results_task1_FFT_20k.json  rollout_results_task1_FFT_30k.json  rollout_results_task1_FFT_40k.json  rollout_results_task1_FFT_50k.json  rollout_results_task1_FFT_60k.json  rollout_results_task1_fpft.json  rollout_results_task1_lora.json  rollout_results_task1_lora_10k.json  rollout_results_task1_lora_10k_r16_uniform.json  rollout_results_task1_lora_10k_r32_uniform.json  (+77 more)
lerobot_camera_zmq/: pyproject.toml
lerobot_robot_ur5e/: __init__.py  pyproject.toml
lerobot_teleoperator_gello/: README.md  pyproject.toml
notebooks/: checkpoint_selection.ipynb  dataset_plots.ipynb  lora_memory_plots.ipynb  loss_charts.ipynb  model_performance_analysis.ipynb  parquet.ipynb  test.ipynb  test2.ipynb
openpi_client/: websocket_client_policy.py
pi_streamer/: README.md  config.example.json  config.json
scripts/: calibrate_gello_teleop.py  eval.py  record.py  remote_pi_inference.py  teleoperate.py  test_zmq_camera.py
src/robots/: ur5e.py
(+13 files in other folders)
