[project]
name = "lerobot-ur5e-gello-dev-env"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.11"

dependencies = []

[tool.setuptools.packages.find]
include = [
    "lerobot_camera_zmq",
    "lerobot_robot_ur5e",
    "lerobot_teleoperator_gello",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "black",
]