[project]
name = "lerobot-ur5e-gello-dev-env"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.11,<3.12"

dependencies = [
    "lerobot",
    "lerobot-camera-zmq",
    "lerobot-robot-ur5e",
    "lerobot-teleoperator-gello",
    "openpi",
]

[tool.setuptools.packages.find]
include = [
    "lerobot_camera_zmq",
    "lerobot_robot_ur5e",
    "lerobot_teleoperator_gello",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "black",
]

[tool.uv.sources]
lerobot-camera-zmq = { path = "lerobot_camera_zmq", editable = true }
lerobot-robot-ur5e = { path = "lerobot_robot_ur5e", editable = true }
lerobot-teleoperator-gello = { path = "lerobot_teleoperator_gello", editable = true }
openpi-client = { git = "https://github.com/Physical-Intelligence/openpi.git" }